[project]
name = "issues_metrics"
version = "0.1.0"
dependencies = [
    "pandas",
    "requests",
    "matplotlib",
    "seaborn",
    "ipython",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["issues_metrics*"]