[project]
name = "issues_metrics"
version = "0.1.0"
dependencies = [
    "pandas",
    "requests",
    "pandas-market-calendars",
    "matplotlib",
    "seaborn",
    "ipython",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["issues_metrics*"]